2003-07-25  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in: Added Vietnamese (vi) and Macedonain (mk) to
	  ALL_LINGUAS

2003-07-19  Paolo Maggi <paolo.maggi@polito.it>

	* gtksourceview/gtksourcebuffer.c (gtk_source_buffer_set_bracket_match_style):
	manage the cases in which GTK_SOURCE_TAG_STYLE_USE_FOREGROUND and or 
	GTK_SOURCE_TAG_STYLE_USE_BACKGROUND are not set.

	* gtksourceview/gtksourcelanguage.c (gtk_source_language_set_tag_style):
	if "style" is NULL restore the default style.

	* gtksourceview/gtksourceview.c: removed hack for bug #81893 since it is now
	fixed in gtk+

2003-07-19  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* configure.in: Added "pt_BR" (Brazilian Portuguese)
	to ALL_LINGUAS.

2003-07-11  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add Norwegian translation.
	* po/ChangeLog:
	* po/no.po:

2003-07-10  Hasbullah Bin Pit  <sebol@ikhlas.com>
                                                                                 
        * configure.in: Added "ms" (Malay) to ALL_LINGUAS.

2003-07-09  Dafydd Harries  <daf@parnassus.ath.cx>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS.

2003-07-09  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2003-07-06  Artur Flinta  <aflinta@cvs.gnome.org>
                                                                                
        * configure.in: Added "pl" to ALL_LINGUAS.
	
=== gtksourceview 0.4.0 ===

2003-06-30  Paolo Maggi  <paolo.maggi@polito.it>

	* NEWS: Updated

2003-06-30  Paolo Maggi  <paolo.maggi@polito.it>

	* configure.in: Bumped version to 0.4.0

	* README: updated

2003-06-28  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* docs/reference/tmpl/stylescheme.sgml: Add get_style_names method.
	* gtksourceview/gtksourcelanguage.c:
	(gtk_source_language_get_tag_default_style): Check for NULL style.
	* gtksourceview/gtksourcestylescheme.c:
	(gtk_source_style_scheme_get_style_names),