@@ -26,6 +26,7 @@ GtkSourceStyleScheme
 </para>
 
 @base_iface: 
+@style_changed: 
 @get_name: 
 @get_tag_style: 
 @get_style_names: 
